--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
 
     <footer>
       <p>
-        Built for sharing tender moments. Export your data with local storage and deploy this static
-        site to Vercel.
+        Built for sharing tender moments. 
       </p>
     </footer>
 
