Refine profiles panel for mobile

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </section>
 
-      <section class="panel" id="profiles">
+      <section class="panel profiles-panel" id="profiles">
         <div class="panel-header">
           <div>
             <h2>Profiles & friends</h2>
