Add local storage note to feed

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             <p>Log a moment, add a photo, and share the story behind it.</p>
           </div>
         </div>
+        <p class="storage-note">
+          Your cries, profile, and friend list are saved locally in this browser (localStorage). Clearing
+          site data or switching browsers resets this session.
+        </p>
 
         <form class="card form" id="cryForm">
           <h3>New cry entry</h3>
